--- a/c.html
+++ b/c.html
@@ -13,6 +13,7 @@
     </style> -->
 </head>
 <body>
+    <h1>my new work</h1>
     <!-- <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni fugiat veniam voluptas accusantium ea dignissimos amet repellendus eveniet quidem doloremque exercitationem, molestias, illum ut ad esse nostrum eos ullam vero.</p> -->
     <p style="color: aqua;background-color: black; font-size: 40PX; font-family: 'Courier New', Courier, monospace; font-weight: 800; font-style: italic;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid molestias quaerat odit deleniti excepturi accusamus tempore nostrum, nihil veritatis quibusdam voluptas nisi. Ex, et eum illo soluta voluptatibus voluptas suscipit.</p>
     <img src="c.html" alt="flower">
